# ghost_suckers

./: .gitignore  Cargo.toml  README.md
assets/: character.glb  dirtbag.glb  ghost.glb  vacuum_range.glb
blender_files/: character.blend  character.blend1  character_export.blend  character_export.blend1  dirtbag.blend  dirtbag.blend1  ghost.blend  ghost.blend1  ghost_export.blend  ghost_export.blend1  vacuum_range.blend
music/: Basetrack.mp3.asd  Basetrack.wav.asd  Basetrack_2.mp3.asd  Basetrack_2.wav.asd  Basetrack_3.mp3.asd  Basetrack_3.wav.asd  Medium Track.mp3.asd  Medium Track.wav.asd  vacuum_running.mp3.asd  vacuum_running.wav.asd  vacuum_start.mp3.asd  vacuum_start.wav.asd  vacuum_stop.mp3.asd  vacuum_stop.wav.asd
music/Basetrack Project/: Basetrack.als  Medium Track.als  vacuum.als
music/Basetrack Project/Ableton Project Info/: Project8_1.cfg
music/Basetrack Project/Backup/: Basetrack [2023-12-10 111719].als  Basetrack [2023-12-10 122010].als  Basetrack [2023-12-10 122453].als  Basetrack [2023-12-10 122853].als  Basetrack [2023-12-10 122924].als  Medium Track [2023-12-10 113858].als  Medium Track [2023-12-10 120342].als  Medium Track [2023-12-10 120920].als  Medium Track [2023-12-10 121222].als  Medium Track [2023-12-10 121519].als  vacuum [2023-12-10 124828].als  vacuum [2023-12-10 124911].als
src/: camera.rs  collision_events.rs  common.rs  component.rs  enemy.rs  enemy_spawner.rs  events.rs  input.rs  main.rs  map_generation.rs  player.rs  resource.rs  sound.rs  ui.rs  upgrade.rs  vacuum.rs
(+16 files in other folders)
