[package]
name = "ghost_suckers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.21.0"
bevy_prng = { version = "0.2", features = ["rand_chacha"] }
bevy_rand = "0.4.0"
bevy_rapier3d = "0.23.0"
rand_core = "0.6.4"
