[package]
name = "ghost_suckers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.12.1", features = [ "wav" ] }
bevy-inspector-egui = "0.21.0"
bevy-scene-hook = "9.0.0"
bevy_hanabi = "0.8.0"
bevy_prng = { version = "0.2", features = ["rand_chacha"] }
bevy_rand = "0.4.0"
bevy_rapier3d = "0.23.0"
rand = "0.8.5"
rand_core = "0.6.4"
